# Auth-Fastapi

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py  oauth2.py  schemas.py
app/router/: auth.py  user.py
app/serializers/: userserializers.py
