[tool.poetry]
name = "auth-fastapi"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "auth_fastapi"}]

[tool.poetry.dependencies]
python = "3.11.3"
fastapi = "^0.95.2"
pydantic = {extras = ["email"], version = "^1.10.7"}
uvicorn = "^0.22.0"
pymongo = "^4.3.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi-jwt-auth = {extras = ["asymmetric"], version = "^0.5.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
